--- a/notebooks/full_presentation.ipynb
+++ b/notebooks/full_presentation.ipynb
@@ -17,9 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = cv2.imread(\"reference/image.jpg\", 1)\n",
-    "model = cv2.imread(\"reference/santo_patrono.jpg\", 1)\n",
-    "model = cv2.imread(\"reference/scaled_rolling_school.png\", 1)\n",
     "stream = cv2.imread(\"reference/ref_smol.jpg\", 1)"
    ]
   },
@@ -48,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +203,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not enough matches found - 56/75\n",
+      "Not enough matches found - 74/75\n",
+      "Not enough matches found - 70/75\n",
+      "Not enough matches found - 30/75\n",
+      "Not enough matches found - 22/75\n",
+      "Not enough matches found - 25/75\n",
+      "Not enough matches found - 70/75\n",
+      "Not enough matches found - 69/75\n",
+      "Not enough matches found - 65/75\n",
+      "Not enough matches found - 42/75\n",
+      "Not enough matches found - 54/75\n",
+      "Not enough matches found - 45/75\n",
+      "Not enough matches found - 19/75\n",
+      "Not enough matches found - 14/75\n",
+      "Not enough matches found - 20/75\n",
+      "Not enough matches found - 23/75\n",
+      "Not enough matches found - 57/75\n",
+      "Not enough matches found - 65/75\n",
+      "Not enough matches found - 70/75\n",
+      "Not enough matches found - 69/75\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -232,7 +256,7 @@
     "bf = cv2.BFMatcher(cv2.NORM_HAMMING, crossCheck=True)\n",
     "\n",
     "# Reference surface\n",
-    "logo = cv2.imread('models/gdg_ramos_scaled.jpeg')\n",
+    "logo = cv2.imread(\"models/mutt.png\")\n",
     "model = cv2.imread(\"reference/santo_patrono.jpg\", 0)\n",
     "h, w = model.shape\n",
     "\n",
@@ -329,13 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# logo = cv2.imread('models/pyar_logo_scaled.png')\n",
     "# logo = cv2.imread('models/gdg_ramos_scaled.jpeg')\n",
-    "logo = cv2.imread(\"models/scaled_rolling_school.png\")\n",
+    "# logo = cv2.imread(\"models/scaled_rolling_school.png\")\n",
+    "logo = cv2.imread(\"models/mutt.png\")\n",
     "\n",
     "cv2.imshow(\"model\", logo)\n",
     "\n",
@@ -352,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,9 +437,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-85de465b53b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mkp_frame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0morb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetectAndCompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;31m# match frame descriptors with model descriptors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0mmatches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdes_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0;31m# sort them in the order of their distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# the lower the distance, the better the match\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -444,7 +481,7 @@
     "\n",
     "\n",
     "# init video capture\n",
-    "cap = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(1)\n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
@@ -550,11 +587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not enough matches found - 72/75\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -701,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,11 +836,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-02d8fbcf43d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0mkp_frame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0morb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetectAndCompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;31m# match frame descriptors with model descriptors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0mmatches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdes_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m     \u001b[0;31m# sort them in the order of their distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;31m# the lower the distance, the better the match\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Adding model\n",
@@ -832,7 +889,7 @@
     "\n",
     "\n",
     "# init video capture\n",
-    "cap = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(1)\n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
