--- a/notebooks/full_presentation.ipynb
+++ b/notebooks/full_presentation.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +152,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Identificar key feachures con ORB BFMatcher y RANSAC<br>\n",
-    "Matriz de homografia para rotrotransladar el objeto"
+    "identify key feachures with ORB BFMatcher and RANSAC<br>\n",
+    "Homografy matriz for rotrotranslate the object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,43 +198,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creemos un objeto y usemos la matriz homografica para ponerlo en el espacio"
+    "We create an object and we use the homography matrix to put it in the space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not enough matches found - 56/75\n",
-      "Not enough matches found - 74/75\n",
-      "Not enough matches found - 70/75\n",
-      "Not enough matches found - 30/75\n",
-      "Not enough matches found - 22/75\n",
-      "Not enough matches found - 25/75\n",
-      "Not enough matches found - 70/75\n",
-      "Not enough matches found - 69/75\n",
-      "Not enough matches found - 65/75\n",
-      "Not enough matches found - 42/75\n",
-      "Not enough matches found - 54/75\n",
-      "Not enough matches found - 45/75\n",
-      "Not enough matches found - 19/75\n",
-      "Not enough matches found - 14/75\n",
-      "Not enough matches found - 20/75\n",
-      "Not enough matches found - 23/75\n",
-      "Not enough matches found - 57/75\n",
-      "Not enough matches found - 65/75\n",
-      "Not enough matches found - 70/75\n",
-      "Not enough matches found - 69/75\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -345,22 +318,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Agregar una imagen 2D a nuestro proyecto\n",
+    "### Add a  2D image\n",
     "\n",
-    "Aca debemos aplicar una logica de mascaras para poder \"sumar\" las imagenes.<br/>\n",
-    "Luego usamos warpPerspective podemos darle el angulo que la matriz homografica nos define."
+    "Here we need to apply a mask logic in orther to add each image.<br/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# logo = cv2.imread('models/pyar_logo_scaled.png')\n",
     "# logo = cv2.imread('models/gdg_ramos_scaled.jpeg')\n",
     "# logo = cv2.imread(\"models/scaled_rolling_school.png\")\n",
-    "logo = cv2.imread(\"models/mutt.png\")\n",
+    "# logo = cv2.imread(\"models/mutt.png\")\n",
+    "logo = cv2.imread(\"models/od.jpeg\")\n",
     "\n",
     "cv2.imshow(\"model\", logo)\n",
     "\n",
@@ -372,12 +345,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para poder sumar 2 imagenes deben tener el mismo tamaño para esto debemos crear una mascara del tamaño de nuestro frame"
+    "In orther to add 2 images they need to have the same size so we need to create a mask for our logo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,8 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora aplicamos la matriz homografica a nuestra mascara y sumamos el resultado al frame.<br/>\n",
-    "Al utilizar una operación bit a bit tipo `or` todos los pixeles negros 0 se sumaran con cualquiero otro pixel de color\n",
+    "Now we apply the homography matrix to our mask and we add the result to the frame using an or operator.<br/>\n",
     "<br/>\n",
     "<table>\n",
     "    <tbody>\n",
@@ -432,26 +404,14 @@
     "        </tr>\n",
     "    </tbody>\n",
     "</table>\n",
-    "El maximo valor es 255 (blanco)"
+    "Maximum possible value 255 (white)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-85de465b53b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mkp_frame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0morb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetectAndCompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;31m# match frame descriptors with model descriptors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0mmatches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdes_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0;31m# sort them in the order of their distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# the lower the distance, the better the match\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -481,7 +441,7 @@
     "\n",
     "\n",
     "# init video capture\n",
-    "cap = cv2.VideoCapture(1)\n",
+    "cap = cv2.VideoCapture(0)\n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
@@ -582,24 +542,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hora de jugar"
+    "### Time to play"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not enough matches found - 72/75\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -740,13 +692,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Hasta aca :("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Render 3D\n",
     "Bueno pero que tan complejo será mostrar cualquier objeto 3D?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,23 +795,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-02d8fbcf43d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0mkp_frame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0morb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetectAndCompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;31m# match frame descriptors with model descriptors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0mmatches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdes_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdes_frame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m     \u001b[0;31m# sort them in the order of their distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;31m# the lower the distance, the better the match\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.2.0) /io/opencv/modules/core/src/batch_distance.cpp:275: error: (-215:Assertion failed) type == src2.type() && src1.cols == src2.cols && (type == CV_32F || type == CV_8U) in function 'batchDistance'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Adding model\n",
@@ -968,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
